<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary">

        <!-- <ImageView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:background="@drawable/selector_button_transparent"
             android:contentDescription="@string/app_name"
             android:src="@drawable/logo"
             android:paddingBottom="8dp"
             android:paddingTop="8dp" />-->

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/selector_button_transparent"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="22sp"
            tools:text="@string/app_name" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/logo"
            android:layout_toRightOf="@+id/logo">

            <ImageView
                android:id="@+id/button_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/selector_button_transparent"
                android:contentDescription="@string/content_description_button_refresh"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:src="@drawable/ic_refresh" />
        </FrameLayout>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ListView
            android:id="@+id/widget_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="0dp"
            tools:listitem="@layout/list_item" />

        <TextView
            android:id="@+id/widget_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/widget_empty_list"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/progress_wheel"
            android:layout_width="@dimen/progress_wheel_size"
            android:layout_height="@dimen/progress_wheel_size"
            android:layout_gravity="center"
            android:visibility="invisible" />
    </FrameLayout>
</LinearLayout>